force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>