force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/CVVcode__c.field-meta.xml
<CustomField>
    <fullName>CVVcode__c</fullName>
    <inlineHelpText>Located on the back of the card.</inlineHelpText>
    <label>CVV code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>