force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/DebitCardNumber__c.field-meta.xml
<CustomField>
    <fullName>DebitCardNumber__c</fullName>
    <label>Debit Card Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>