force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <inlineHelpText>Please enter in the format XX/XX</inlineHelpText>
    <label>Expiration Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>