force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/RoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>RoutingNumber__c</fullName>
    <label>Routing Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>